Bug 874024 - Allow creation of ScriptProcessorNodes with 0 input or output channels; r=roc